--- a/main.html
+++ b/main.html
@@ -23,7 +23,6 @@
 
                     if(valid){
                         showElo()
-                        format = userFormat;
                         $('#currentformat').text(format)
                     }else{
                         console.log("no no no, bad format")
@@ -37,12 +36,16 @@
                 var url = userFormat + ".format";
 
                 $.get(url, function(data) {
-                    validFormatString = data;
+                    console.log(data)
+                    validFormatString = data[0];
 
                     if(validFormatString === "True"){
                         validFormat = true
+                        format = data[1]
                     }else{
                         validFormat = false
+                        updateDidYouMeanFormats(data[1])
+                        console.log(data[1])
                     }
 
                     callback(validFormat);
@@ -362,6 +365,23 @@
                 return stat * 1.4;
             }
 
+            function updateDidYouMeanFormats(formats){
+                //must be -1, return error/invalid
+                $('#didyoumeantable').empty();
+                newRow = '<td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Did You Mean? </p></td>'
+                $('#didyoumeantable').append(newRow);
+
+                for(var i = 0; i < formats.length; i++){
+                    newRow = '<tr><td><a href="javascript:"><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;" onmousedown="setDidYouMeanFormat(&quot;'+ formats[i] +'&quot;);">' + formats[i] + '</p></a></td></tr>'
+                    $('#didyoumeantable').append(newRow);
+                }
+            }
+
+            function setDidYouMeanFormat(format){
+                $('#getformat').val(format)
+                setFormat();
+            }
+
         </script>
 
         <style>
@@ -485,6 +505,10 @@
                         drop-shadow(-1px 1px 0 white);
             }
 
+            a{
+                color: rgb(207, 236, 255);
+            }
+
         </style>
 
     </head>
@@ -492,12 +516,16 @@
     <body>
         <!-- get format -->
         <div id="getformatbody">
+            <h2 style="margin-top:5px;">YogonDexLite</h2>
+            <p>Please Input A Format:</p>
             <input id="getformat" name="getformat" value="gen9doublesou" />
             <button style="display:inline; vertical-align:middle; font-size: 12;" onmousedown="setFormat();" id="setFormatButton">Set Format</button>
         </div>
 
         <!-- get elo -->
         <div id="getelobody">
+            <h2 style="margin-top:5px;">YogonDexLite</h2>
+            <p>Please Input Your Elo:</p>
             <input id="getelo" name="getelo" value="1000" />
             <button style="display:inline; vertical-align:middle; font-size: 12;" onmousedown="setElo();" id="setEloButton">Set Elo</button>
         </div>
@@ -518,17 +546,17 @@
                 </li>
             </ul></nav>
 
-            <h2>YogonDexLite</h2>
+            <h2 style="margin-top:5px;">YogonDexLite</h2>
 
             <div class="graybg"></div>
 
             <!-- pokemon image -->
-            <table class="imagebg" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+            <table class="imagebg" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
                 <tr><td><img class="imgwhiteborder" id="pokemonImage" src="https://play.pokemonshowdown.com/sprites/substitutes/gen5/substitute.png" alt="INPUT A POKEMON TO SEE IT!!!"></td></tr>
             </table>
 
             <!-- huge table -->
-            <table style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+            <table style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                 <!-- name -->
                 <!-- dex number -->
@@ -536,7 +564,7 @@
                 <!-- usage -->
                 <tr id="pokemonnamerow">
 
-                    <table class="graybg" id="pokemonnametable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonnametable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
                         <tr>
                             <td id="pokemonnames"><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Name: </p>            <p style="display:inline; vertical-align:middle; font-size: 12;" id="pokemonname">A Pokemon</p></td>
                             <td id="pokemondexnumbers"><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Dex Number: </p> <p style="display:inline; vertical-align:middle; font-size: 12;" id="pokemondexnumber">A Number</p></td>
@@ -552,7 +580,7 @@
                 <!-- type -->
                 <tr id="pokemontypesrow">
 
-                    <table class="graybg" id="pokemontypestable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemontypestable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Type: </p>
@@ -567,7 +595,7 @@
                 <!-- abl -->
                 <tr id="pokemonabilitiesrow">
 
-                    <table class="graybg" id="pokemonabilitiestable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonabilitiestable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;" id="pokemonabls">Abilities: </p></td>
@@ -583,7 +611,12 @@
                 <!-- def matchups -->
                 <tr id="pokemondefmatchupsrow">
 
-                    <table class="graybg" id="pokemondefmatchupstable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemondefmatchupstable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
+
+                        <tr>
+                            <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Defensive Matchups: </p></td>
+                        </tr>
+
                         <tr id="pokemon0xmu">
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">0x: </p></td>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12;">0x</p></td>
@@ -621,7 +654,7 @@
                 <!-- stats -->
                 <tr id="pokemonstatsrow">      
 
-                    <table class="graybg" id="pokemonstatstable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonstatstable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;" id="hplabel">HP:</p></td>
@@ -666,7 +699,7 @@
                 <!-- spreads -->
                 <tr id="pokemonspreadsrow">
 
-                    <table class="graybg" id="pokemonspreadstable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonspreadstable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Spreads: </p></td>
@@ -678,7 +711,7 @@
                 <!-- moves -->
                 <tr id="pokemonmovesrow">
 
-                    <table class="graybg" id="pokemonmovestable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonmovestable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Moves: </p></td>
@@ -690,7 +723,7 @@
                 <!-- items -->
                 <tr id="pokemonitemsrow">
 
-                    <table class="graybg" id="pokemonitemstable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonitemstable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Items: </p></td>
@@ -702,7 +735,7 @@
                 <!-- teammates -->
                 <tr id="pokemonteammatesrow">
 
-                    <table class="graybg" id="pokemonteammatestable" style="margin-left:auto; margin-right:auto; vertical-align:middle;">
+                    <table class="graybg" id="pokemonteammatestable" style="margin-left:auto; margin-right:auto; vertical-align:middle; margin-top:5px;">
 
                         <tr>
                             <td><p style="display:inline; vertical-align:middle; font-size: 12; font-weight: bold;">Teammates: </p></td>
