--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>YogonDexLite (WIP)</title>
+        <title>YogonDexLite 1.0</title>
         <link rel="icon" type="image/png" href="https://www.pokencyclopedia.info/sprites/misc/spr_substitute/art__substitute.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script>
